feat: user side completed fully
